# vector_search_engine

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  client_bench.cpp  distance_bench.cpp  recall_bench.cpp
include/: distance.h  ebr_manager.h  engine.h  hnsw_index.h  hnsw_node.h  utils.h  write_buffer.h
proto/: vector_search.proto
src/: distance.cpp  server.cpp
